--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -50,52 +50,52 @@
     <li>
       <a class="page-link {% if page.url contains 'docs/AccountManager' %} active {% endif %}"
          {% if page.url contains "docs/AccountManager" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#AccountManager">Менеджер аккаунтов</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#AccountManager">Менеджер аккаунтов</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'docs/Browser' %} active {% endif %}"
          {% if page.url contains "docs/Browser" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Browser">Настройка браузера</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Browser">Настройка браузера</a>
     </li>
     <li>
       <a class="page-link {% if page.url == 'MultiLogger' %} active {% endif %}"
          {% if page.url == "MultiLogger" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#MultiLogger">Мультилогер</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#MultiLogger">Мультилогер</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains '/Instance' %} active{% endif %}"
          {% if page.url contains "/Instance" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Instance">Instance</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Instance">Instance</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Project' %} active{% endif %}"
          {% if page.url contains "Project" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Project">Project</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Project">Project</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Variables' %} active{% endif %}"
          {% if page.url contains "Variables" %}style="color: #00ccff"{% endif %}
-      href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Variables">Project.Variables</a>
+      href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Variables">Project.Variables</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Tab' %} active{% endif %}"
          {% if page.url contains "Tab" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Tab">Tab</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Tab">Tab</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'HtmlElement' %} active{% endif %}"
          {% if page.url contains "HtmlElement" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#HtmlElement">HtmlElement</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#HtmlElement">HtmlElement</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains '/DateTime' %} active{% endif %}"
          {% if page.url contains "/DateTime" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#DateTime">DateTime</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#DateTime">DateTime</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Int32' %} active{% endif %}"
          {% if page.url contains "Int32" %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}/#Int32">Int32</a>
+         href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Int32">Int32</a>
     </li>
   </ul>
 
