--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <link href="http://gmpg.org/xfn/11" rel="profile" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="shortcut icon" href="http://zennolab.com/wp-content/themes/zenno/img/favicon.ico" type="image/x-icon"/>
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
