--- a/_sass/hydeout/_syntax1.scss
+++ b/_sass/hydeout/_syntax1.scss
@@ -1,8 +1,8 @@
 .highlight .hll { background-color: #ffc; }
-.highlight .c { color: #93a1a1; font-style: italic; } /* Comment */
+.highlight .c { color: #999; } /* Comment */
 .highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #859900; } /* Keyword */
-.highlight .o { color: #657b83 } /* Operator */
+.highlight .k { color: #069; } /* Keyword */
+.highlight .o { color: #555 } /* Operator */
 .highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
 .highlight .c1 { color: #999; } /* Comment.Single */
