--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -29,7 +29,7 @@ $padding-v: 1em !default;
 $padding-h: 1.5em !default;
 $heading-spacing: 0.5rem !default;
 $section-spacing: 2rem !default;
-$sidebar-width: 18.5rem !default;
+$sidebar-width: 17.5rem !default;
 
 $large-breakpoint: 49rem !default;
 $large-font-size: 1.1rem !default;
@@ -45,6 +45,6 @@ $code-font-family: Menlo, Monaco, "Courier New", monospace !default;
 $code-color: #bf616a !default;
 
 // Hyde theming
-$sidebar-bg-color: #0B1E30 !default;
+$sidebar-bg-color: #007ee5 !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
