--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css" />
   {% include font-includes.html %}
 
   <!-- Icons -->
