--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <div id="sidebar">
+
   <header>
     <div class="site-title">
       <a href="{{ site.baseurl }}/">
@@ -11,90 +12,62 @@
     <p class="lead">{{ site.description }}</p>
   </header>
   
-  <a class="page-link" href="http://zennolab.com/discussion/" target="_blank">Форум ZennoLab</a>
+  <a class="nav-link" style="" href="http://zennolab.com/discussion/" target="_blank">Форум ZennoLab</a>
 
   <br/>
 
-  <div class="lead">Статьи</div>
-  <ul>
-    <li>
-      <a class="page-link {% if page.url == site.sidebar_start_link %} active{% endif %}"
-         {% if page.url == site.sidebar_start_link %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}{{ site.sidebar_start_link }}">Подключение</a>
-    </li>
-    <li>
-      <a class="page-link {% if page.url == '/ExtensionMethods' %} active{% endif %}"
-         {% if page.url == '/ExtensionMethods' %}style="color: #00ccff"{% endif %}
-      href="{{ site.baseurl }}/ExtensionMethods">Методы расширения</a>
-    </li>
-    <li>
-      <a class="page-link {% if page.url == '/AccountManager' %} active{% endif %}"
-        {% if page.url == '/AccountManager' %}style="color: #00ccff"{% endif %}
-        href="{{ site.baseurl }}/AccountManager">Менеджер аккаунтов</a>
-    </li>
-    <li>
-      <a class="page-link {% if page.url == '/BrowserManager' %} active{% endif %}"
-        {% if page.url == '/BrowserManager' %}style="color: #00ccff"{% endif %}
-        href="{{ site.baseurl }}/BrowserManager">Менеджер браузера</a>
-    </li>
-    <li>
-      <a class="page-link {% if page.url == '/MultiLogger' %} active{% endif %}"
-         {% if page.url == '/MultiLogger' %}style="color: #00ccff"{% endif %}
-         href="{{ site.baseurl }}/MultiLogger">Логирование</a>
-    </li>
-  </ul>
-  <a class="page-link {% if page.url == site.sidebar_docs_link %} active{% endif %}"
-     {% if page.url == site.sidebar_docs_link %}style="color: #00ccff"{% endif %}
-     href="{{ site.baseurl }}{{ site.sidebar_docs_link }}">Документация</a>
+      <a class="nav-link {% if page.url == site.sidebar_start_link %}active{% endif %}"
+         href="{{ site.baseurl }}{{ site.sidebar_start_link }}"><i class="icon fa fa-sign-in"></i>Подключение</a>
+      <a class="nav-link {% if page.url == '/ExtensionMethods' %} active{% endif %}"
+         href="{{ site.baseurl }}/ExtensionMethods"><i class="icon fa fa-code"></i>Методы расширения</a>
+      <a class="nav-link {% if page.url == '/AccountManager' %} active{% endif %}"
+        href="{{ site.baseurl }}/AccountManager"><i class="icon fa fa-users"></i>Менеджер аккаунтов</a>
+      <a class="nav-link {% if page.url == '/BrowserManager' %} active{% endif %}"
+        href="{{ site.baseurl }}/BrowserManager"><i class="icon fa fa-firefox"></i>Менеджер браузера</a>
+      <a class="nav-link {% if page.url == '/MultiLogger' %} active{% endif %}"
+         href="{{ site.baseurl }}/MultiLogger"><i class="icon fa fa-pencil-square-o"></i>Логирование</a>
+  <br>
+  <a class="nav-link {% if page.url == site.sidebar_docs_link %} active{% endif %}"
+     href="{{ site.baseurl }}{{ site.sidebar_docs_link }}"><i class="icon fa fa-info-circle"></i>Документация</a>
   <ul>
     <li>
       <a class="page-link {% if page.url contains 'docs/AccountManager' %} active {% endif %}"
-         {% if page.url contains "docs/AccountManager" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#AccountManager">Менеджер аккаунтов</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'docs/BrowserManager' %} active {% endif %}"
-         {% if page.url contains "docs/BrowserManager" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#BrowserManager">Настройка браузера</a>
     </li>
     <li>
       <a class="page-link {% if page.url == 'MultiLogger' %} active {% endif %}"
-         {% if page.url == "MultiLogger" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#MultiLogger">Мультилогер</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains '/Instance' %} active{% endif %}"
-         {% if page.url contains "/Instance" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Instance">Instance</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Project' %} active{% endif %}"
-         {% if page.url contains "Project" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Project">Project</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Variables' %} active{% endif %}"
-         {% if page.url contains "Variables" %}style="color: #00ccff"{% endif %}
       href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Variables">Project.Variables</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Tab' %} active{% endif %}"
-         {% if page.url contains "Tab" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Tab">Tab</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'HtmlElement' %} active{% endif %}"
-         {% if page.url contains "HtmlElement" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#HtmlElement">HtmlElement</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains '/DateTime' %} active{% endif %}"
-         {% if page.url contains "/DateTime" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#DateTime">DateTime</a>
     </li>
     <li>
       <a class="page-link {% if page.url contains 'Int32' %} active{% endif %}"
-         {% if page.url contains "Int32" %}style="color: #00ccff"{% endif %}
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Int32">Int32</a>
     </li>
   </ul>
