--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -1,27 +1,3 @@
-/*
-  Layout
-
-  Styles for managing the structural hierarchy of the site.
-  Hydeout features the large colored sidebar from Hyde that houses the
-  site name, intro, and "footer" content. Sidebar is on top of content on
-  mobile and expands into sidebar on larger width displays.
-
-  Sidebar CSS assumes HTML looks like this for post pages:
-
-    body
-    > #sidebar
-      > header (primary sidebar content -- i.e. title)
-        > h1 (home page only, otherwise div or span)
-      > secondary nav content we may want to hide on certain pages
-    > .container
-      > h1 (non-home page)
-      > .content
-
-  Basic approach is to color in body, make sidebar background transparent,
-  and then fill in the .container or .content elements depending on how far
-  we want the sidebar or header to stretch.
-*/
-
 body {
   color: rgba(255,255,255,.75);
   background: $sidebar-bg-color linear-gradient(
@@ -39,7 +15,7 @@ body {
   padding: $section-spacing;
 
   .site-title {
-    font-family: "Abril Fatface", serif;
+    font-family: "Roboto Light", sans-serif;
     font-weight: normal;
     font-size: 2.9rem;
     color: rgba(255,255,255,.75);
@@ -116,7 +92,6 @@ body {
   .site-title {
     font-size: 1.8rem;
     color: white;
-	font-family: "Abril Fatface", serif;
 	font-weight: 300;
   }
 
@@ -167,6 +142,9 @@ body {
       font-size: 1.8rem;
 	  margin-bottom: 0;
       a { color: white; }
+      a:hover{
+        color: #ffca00;
+      }
       .back-arrow { display: none; }
     }
 	
@@ -214,6 +192,7 @@ body {
 
 #sidebar a {
   color: #fff;
+  font-weight: 300;
 
   svg {
     fill: rgba(255, 255, 255, 0.85);
@@ -224,7 +203,8 @@ body {
   }
 
   &:hover, &:focus {
-    text-decoration: underline;
+    text-decoration: none;
+    color: #ffca00;
     &.icon {
       text-decoration: none;
     }
@@ -232,11 +212,19 @@ body {
 
   &.active {
     font-weight: bold;
+    color: #ffca00;
   }
 }
 
 #sidebar nav {
   display: flex;
+}
+
+#sidebar .nav-link i {
+  font-size: 1.0rem;
+  margin-right: 15px;
+  vertical-align: inherit;
+  width: 20px;
 }
 
 #sidebar-nav-links {
