--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -45,6 +45,6 @@ $code-font-family: Menlo, Monaco, "Courier New", monospace !default;
 $code-color: #bf616a !default;
 
 // Hyde theming
-$sidebar-bg-color: #007ee5 !default;
+$sidebar-bg-color: #086dc0 !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
