--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
      href="{{ site.baseurl }}/MultiLogger"><i class="icon fa fa-pencil-square-o"></i>Логирование</a>
   <br>
   <a class="nav-link {% if page.url == site.sidebar_docs_link %} active{% endif %}"
-     href="{{ site.baseurl }}{{ site.sidebar_docs_link }}"><i class="icon fa fa-info-circle"></i>Документация</a>
+     href="{{ site.baseurl }}{{ site.sidebar_docs_link }}"><i class="icon fa fa-info-circle"></i>Описание методов</a>
   <ul>
     <li>
       <a class="page-link {% if page.url contains 'docs/AccountManager' %} active {% endif %}"
