--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,8 +12,8 @@
     <p class="lead">{{ site.description }}</p>
   </header>
 
-  <a class="nav-link {% if page.url == site.sidebar_start_link %}active{% endif %}"
-     href="{{ site.baseurl }}{{ site.sidebar_start_link }}"><i class="icon fa fa-sign-in"></i>Подключение</a>
+  <a class="nav-link {% if page.url == '/' %}active{% endif %}"
+     href="{{ site.url }}"><i class="icon fa fa-sign-in"></i>Подключение</a>
   <a class="nav-link {% if page.url == '/ExtensionMethods' %} active{% endif %}"
      href="{{ site.baseurl }}/ExtensionMethods"><i class="icon fa fa-code"></i>Методы расширения</a>
   <a class="nav-link {% if page.url == '/AccountManager' %} active{% endif %}"
