--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,7 @@
   <a class="nav-link {% if page.url == '/MultiLogger' %} active{% endif %}"
      href="{{ site.baseurl }}/MultiLogger"><i class="icon fa fa-pencil-square-o"></i>Логирование</a>
   <a class="nav-link {% if page.url == '/Utils' %} active{% endif %}"
-     href="{{ site.baseurl }}/Utils"><i class="icon fa fa-pencil-square-o"></i>Вспомогательные классы</a>
+     href="{{ site.baseurl }}/Utils"><i class="icon fa fa-wrench"></i>Хелперы</a>
   <br>
   <a class="nav-link {% if page.url == site.sidebar_docs_link %} active{% endif %}"
      href="{{ site.baseurl }}{{ site.sidebar_docs_link }}"><i class="icon fa fa-info-circle"></i>Описание методов</a>
