--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,17 @@
   <noscript><div><img src="https://mc.yandex.ru/watch/47093382" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46103963-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-46103963-1');
+  </script>
+
+  
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css" />
