--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
   <br>
   <a class="nav-link {% if page.url == site.sidebar_docs_link %} active{% endif %}"
      href="{{ site.baseurl }}{{ site.sidebar_docs_link }}"><i class="icon fa fa-info-circle"></i>Описание методов</a>
+
   <ul>
     <li>
       <a class="page-link {% if page.url contains 'docs/AccountManager' %} active {% endif %}"
@@ -69,5 +70,7 @@
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Int32">Int32</a>
     </li>
   </ul>
-
+  <br>
+  <a class="nav-link"
+     href="http://zennolab.com/discussion/members/10354/"><i class="icon fas fa-comment"></i>Контакты</a>
 </div>
