--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -70,7 +70,6 @@
          href="{{ site.baseurl }}{{ site.sidebar_docs_link }}#Int32">Int32</a>
     </li>
   </ul>
-  <br>
   <a class="nav-link"
-     href="http://zennolab.com/discussion/members/10354/"><i class="icon fas fa-comment"></i>Контакты</a>
+     href="http://zennolab.com/discussion/members/10354/" target="_blank"><i class="icon fa fa-comment"></i>Контакты</a>
 </div>
